# yaserde

examples/: Cargo.toml
examples/src/: lib.rs  mixed_namespaces.rs
yaserde_derive/src/de/: expand_enum.rs
