[package]
name = "yaserde-examples"
version = "0.11.1"
authors = ["Marc-Antoine Arnaud <maarnaud@media-io.com>"]
license = "MIT"
edition = "2018"
description = "Examples for YaSerDe project"
documentation = "https://docs.rs/yaserde"

[dependencies]
env_logger = "0.11.5"
log = "0.4.22"
yaserde = { version = "0.11.1", path = "../yaserde", features = [
    "yaserde_derive",
] }
